# test_allegro

./: CMakeLists.txt  LS_allegro.c  game.c  game.h  main.c
configuration/: configuration.c  configuration.h
file/: file.c  file.h
interface/: interface.c  interface.h
models/: base.h  car.h  championship.h  check.h  gps.h  pieces.h  player.h  racer.h
race/: race.c  race.h
